@@ -1,5 +1,12 @@
 2009-02-05 Rodrigo Kumpera  <rkumpera@novell.com>
 
+	* section-table-tests.md: New test suite for
+	section headers.
+
+	* Makefile: Add new test suite.
+
+2009-02-05 Rodrigo Kumpera  <rkumpera@novell.com>
+
 	* gen-md-tests.c: Add section-table var.
 	Add support for function calls. Added read.uint.
 	Added support for complex arithmetic expressions.
